--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,15 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Adoption Center</title>
+        <title>Joshua's Corner</title>
         <!-- Add Tailwind CSS CDN -->
         <link
             href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
             rel="stylesheet"
         />
-        <!-- Existing CSS files -->
-        <link rel="stylesheet" href="/css/jass.css" />
-        <link rel="stylesheet" href="/css/style.css" />
     </head>
 
     <body>
