Added a header and content section

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,14 @@
     </head>
 
     <body>
-        {{{body}}}
+        <main>
+            <div id="header">
+                {{!-- Top of the website is for navbar and title --}}
+            </div>
+            <div id="content">
+                {{!-- Body of the page for content --}}
+                {{{body}}}
+            </div>
+        </main>
     </body>
 </html>
