Fixed add new post function and created and tested delete post function

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,9 +7,9 @@
 <div class="post-template">
 
     <header class="post-header">
-        <title class="post-title">
+        <div class="post-title">
             {{this.title}}
-        </title>
+        </div>
         <p class="post-data">
             Posted by:
             {{this.author}}
