--- a/views/auth.handlebars
+++ b/views/auth.handlebars
@@ -1,1 +1,19 @@
-<h1>Sign Up / Login</h1>
+<h1> Sign Up </h1>
+
+{{!-- SIGN UP FORM --}}
+
+<form id="signup-user-form">
+
+    {{!-- USERNAME --}}
+    <label for="username" name="username-signup">Username</label>
+    <input type="text" id="username-signup">
+    
+    {{!-- PASSWORD --}}
+    <label for="password" name="password-signup">Password</label>
+    <input type="password" id="password-signup">
+    
+    <input type="submit" value="Sign In">
+
+</form>
+
+ <script src="/js/auth.js"></script>
