--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,43 +6,67 @@
     <title>Joshua's Corner</title>
     <!-- Add Tailwind CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+    <script src="/js/main.js"></script>
 </head>
 
 <body>
     <main>
-        <div id="header">
-            {{! Title }}
 
+        <div id="header">
+
+            {{! Title }}
             <h1 id="title">
                 Joshua's Corner
             </h1>
 
             {{! Navbar }}
-
             <ul id="navbar">
+
                 <li>
                     <a href="/">
                         Home
                     </a>
                 </li>
+
                 <li>
                     <a href="/dash">
                         Dashboard
                     </a>
                 </li>
-                <li>
+
+                <!-- if the user has logged in -->
+                {{#if logged_in}}
+
+                {{! Present them with the option to leave. }}
+
+                <button id="logout-button">
+                    Log Out
+                </button>
+
+                {{else}}
+
+                <div>
                     <a href="/auth">
-                        Login
+                        Log In
                     </a>
-                </li>
+                </div>
+
+                {{/if}}
+
             </ul>
 
         </div>
+
+        {{!-- CONTENT --}}
         <div id="content">
+
             {{! Body of the page for content }}
             {{{body}}}
+
         </div>
+
     </main>
 </body>
- 
+
+
 </html>
