--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -6,11 +8,11 @@
     <title>Joshua's Corner</title>
     <!-- Add Tailwind CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-    <script src="/js/main.js"></script>
 </head>
 
 <body>
     <main>
+
 
         <div id="header">
 
@@ -38,18 +40,17 @@
                 {{#if logged_in}}
 
                 {{! Present them with the option to leave. }}
-
                 <button id="logout-button">
                     Log Out
                 </button>
 
                 {{else}}
 
-                <div>
-                    <a href="/auth">
-                        Log In
-                    </a>
-                </div>
+
+                <button id="login-button">
+                    Log In
+                </button>
+
 
                 {{/if}}
 
@@ -65,7 +66,11 @@
 
         </div>
 
+        {{#if error}}
+        <p class="error">{{error}}</p>
+        {{/if}}
     </main>
+    <script src="/js/main.js"></script>
 </body>
 
 
