When an user click a post they will be redirected to a post page showing the complete post.

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,7 +4,7 @@
 
 {{!-- POST TEMPLATE --}}
 
-<div class="post-template">
+<div class="post-template" data-id="{{this.id}}">
 
     <header class="post-header">
         <div class="post-title">
@@ -25,3 +25,5 @@
     </div>
 </div>
 {{/each}}
+
+ <script src="/js/home.js"></script>
