Updated Dashboard: User can see all their posts and there are checks to see if the user is logged in, if they have posts and/or if there was an error with the database

--- a/views/dash.handlebars
+++ b/views/dash.handlebars
@@ -1,1 +1,15 @@
 <h1>Dashboard</h1>
+
+{{#each outData}}
+{{!-- {{@index}}: {{this}}
+
+{{}} --}}
+
+{{#if this.error}}
+<h1>{{this.error}}</h1>
+{{else}}
+<h1>{{this.title}}</h1>
+<p>{{this.content}}</p>
+{{/if}}
+
+{{/each}}
