--- a/views/postform.handlebars
+++ b/views/postform.handlebars
@@ -1,4 +1,4 @@
-<form id="new-post-form">
+<form>
     <input
         type="text"
         id="post-title-submit"
@@ -14,6 +14,7 @@
     <button
         type="submit"
         id="post-submit"
+        value="Add a Post"
         class="mt-4 w-full bg-indigo-600 text-white py-2 px-4 rounded-lg hover:bg-indigo-700 transition duration-300"
     >Submit Post</button>
 </form>
